--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -40,5 +40,5 @@ security:
     access_control:
         - { path: ^/register , roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login , roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/project/manage, roles: [ ROLE_ADMIN ] }
+        - { path: ^/product/manage, roles: [ ROLE_ADMIN ] }
         - { path: ^/, roles: [ ROLE_USER, ROLE_ADMIN, ROLE_EDITOR ] }
